maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: ';' expected but '(' found.
  var Ttraite : Array[Boolean](a)
                              ^JediEscaper:8: error: ';' expected but '(' found.
  var Tvaleur : Array[Int](a)
                          ^JediEscaper:25: error: '(' expected but '{' found.
  }while{Ttraite(positionBuggleX + positionBuggleY)}
        ^